--- a/templates/static/bottom.html
+++ b/templates/static/bottom.html
@@ -2,7 +2,7 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0 auto; text-align: center;">
   <tr>
     <td style="text-align: center; padding-bottom: 12px; padding-top: 24px;">
-      <img alt="Near Future Laboratory" src="https://nearfuturelaboratory.com/images/site/NFL_LOGO__NFL_BLUEISH_200px.png" style="margin: 0 auto; display: block; max-width: 100%; height: auto; -ms-interpolation-mode: bicubic;" width="auto" height="auto">
+      <img alt="Near Future Laboratory" src="https://nearfuturelaboratory.com/images/site/NFL_LOGO__NFL_BLUEISH_200px.png" class="small-image" style="margin: 0 auto; display: block; max-width: 120px; height: auto; -ms-interpolation-mode: bicubic;">
     </td>
   </tr>
 </table>
@@ -30,7 +30,7 @@
                       <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
                         <!-- <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;">Amplify This</h1> -->
                         <p class="share" style="font-size: 9px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
-                          <a href="https://nearfuturelaboratory.com/outbox/issues/2025/w02-y25.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">nearfuturelaboratory.com/outbox/issues/2025/w02-y25.html</b></a>
+                          <a href="https://nearfuturelaboratory.com/outbox/issues/2025/w17-y25.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">nearfuturelaboratory.com/outbox/issues/2025/w17-y25.html</b></a>
                         </p>
                       </td>
                     </tr>
