--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -27,27 +27,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 <style>
+  
   @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
-    font-family: 'FormaDJRVariable';
-    font-style: bold;
-    font-variation-settings: "wght" 600;
-  }
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
-    font-family: 'FormaDJRVariable';
+    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRUI-Bold.woff2') format("woff2"),
+    url('/fonts/formadjr/FormaDJRUI-Bold.woff') format("woff");
+    font-family: 'FormaDJRUI';
     font-style: normal;
-    font-variation-settings: "wght" 400;
+    font-weight: bold;
   }
-  @font-face {
-  src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRUI-Bold.woff2') format("woff2"),
-       url('/fonts/formadjr/FormaDJRUI-Bold.woff') format("woff");
-  font-family: 'FormaDJRUI';
-  font-style: normal;
-  font-weight: bold;
-}
   @font-face {
     src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
     url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
@@ -57,43 +44,43 @@
   }
   
   @font-face {
-  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
-       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
-  font-family: 'WarblerText';
-  font-style: italic;
-  font-weight: 400;
-}
-
-@font-face {
-  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
-       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
-  font-family: 'WarblerText';
-  font-style: normal;
-  font-weight: bold;
-  font-weight: 700;
-}
-
-@font-face {
-  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff2') format("woff2"),
-       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff') format("woff");
-  font-family: 'WarblerText';
-  font-weight: bold;
-  font-style: italic;
-  font-weight: 700;
-}
-
-@font-face {
-  src: url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-       url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
-  font-family: 'RoslindaleVariable';
-}
-
-@font-face {
-  font-family: "ChicagoKare";
-  font-weight: 400;
-  font-style: normal;
-  src: url('https://nearfuturelaboratory.com/fonts/chicagokare-regular/ChicagoKare-Regular.woff2') format('woff2');
-}
+    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
+    font-family: 'WarblerText';
+    font-style: italic;
+    font-weight: 400;
+  }
+  
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
+    font-family: 'WarblerText';
+    font-style: normal;
+    font-weight: bold;
+    font-weight: 700;
+  }
+  
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff') format("woff");
+    font-family: 'WarblerText';
+    font-weight: bold;
+    font-style: italic;
+    font-weight: 700;
+  }
+  
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
+    font-family: 'RoslindaleVariable';
+  }
+  
+  @font-face {
+    font-family: "ChicagoKare";
+    font-weight: 400;
+    font-style: normal;
+    src: url('https://nearfuturelaboratory.com/fonts/chicagokare-regular/ChicagoKare-Regular.woff2') format('woff2');
+  }
   
 </style>
 <style media="screen" type="text/css">
@@ -105,11 +92,6 @@
       width: 100% !important;
       max-width: 100% !important;
     }
-    table {
-    width: 100% !important;
-    max-width: 100% !important;
-    }
-    
     .headline {
       padding-left: 12px !important;
       padding-right: 12px !important;
@@ -136,7 +118,45 @@
     .rounded-box {
       border-radius: 0.5rem !important;
     }
+    /* Stack columns instead of side-by-side */
+    .column-image,
+    .column-text {
+      display: block !important;
+      width: 100% !important;
+      max-width: 100% !important;
+    }
+    
+    /* Adjust padding for stacked layout */
+    .column-image {
+      padding-bottom: 0 !important;
+    }
+    
+    .padl20, .padr20, .padl10, .padr10 {
+      padding-left: 15px !important;
+      padding-right: 15px !important;
+    }
+    
+    /* Make images fit the width */
+    img:not(.small-image) {
+      width: 100% !important;
+      max-width: 100% !important;
+      height: auto !important;
+    }   
+    
+    
+    /* Force tables to be 100% width */
+    table.force-row {
+      width: 100% !important;
+      max-width: 100% !important;
+    }
+    
+    /* Add some space between stacked elements */
+    .column-image td {
+      padding-bottom: 0 !important;
+    }
+    
   }
+  
 </style>
 
 <!--[if mso]>
@@ -199,22 +219,27 @@
 <body style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
   
   <div style="margin:0 auto;max-width:600px;width:100%;">
-  <!-- HEADER -->
-  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
-    <tr>
-      <td align="center" style="padding: 15px 0;">
-        <img src="https://nearfuturelaboratory.com/images/site/logos/LaboratoryCircle_Guy_01_CircleTeal_200px.png" alt="Near Future Laboratory" width="120" style="-ms-interpolation-mode: bicubic; border: 0; display: block;">
-      </td>
-    </tr>
-  </table>
-      
-  <!-- BODY -->
-  <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;table-layout: fixed;margin: 0 auto;">    <tbody>            
+    <!-- HEADER -->
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
+      <tr>
+        <td align="center" style="padding: 15px 0;">
+          <img src="https://nearfuturelaboratory.com/images/site/logos/LaboratoryCircle_Guy_01_CircleTeal_200px.png" 
+          alt="Near Future Laboratory" 
+          width="120" 
+          class="small-image" 
+          style="-ms-interpolation-mode: bicubic; border: 0; display: block; max-width: 120px; width: 100%; height: auto;">
+        </td>
+        
+      </tr>
+    </table>
+    
+    <!-- BODY -->
+    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;table-layout: fixed;margin: 0 auto;">    <tbody>            
       <tr>
         <td align="center" style="margin-bottom: 15px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
           
           <!-- 600px container (white background) -->
           <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;">
             <tbody>
-
+              
               <!-- end top.html -->
