--- a/templates/book-haul-item.html
+++ b/templates/book-haul-item.html
@@ -1,49 +1,51 @@
-                <!-- start accessory-item-header.html -->
-                <tr>
-                  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
-                </tr>
-                <tr>
-                  <td align="left" class="headline" style="border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }};{{ item['extra_box_style'] }}; padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}">
-                    <p style="mso-line-height-rule: exactly;font-family: {{ item['title_font_family'] }}; font-style: {{ item['title_font_style'] }}; font-weight: {{ item['title_font_weight']}}; font-size: 21px;font-weight: 600;line-height: 23px;color:{{ item['title_text_color']}};margin: 0;padding: 0;">{{ item['title']}} 
-                    </p>
-                  </td>
-                </tr>
-                <!-- end accessory-item-header.html -->
-                <!-- start book-haul-item.html-->
-                <tr>
-                  <td align="left" style=" background-color: {{item['background_color']}}; border-collapse: collapse;   border-left: {{ item['border_width_left']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width_right']}} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width_bottom']}} solid {{ item['border_color'] }}; border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-top-left-radius: {{ item['top_left_radius']}}; {{ item['extra_box_style'] }};">
+<!-- start book-haul-item.html -->
+<tr>
+  <td class="spacer" style="border-collapse: collapse; font-size: 1px; line-height: 1; padding-top: 25px;">&nbsp;</td>
+</tr>
 
-                    <!--[if mso]>
-              <table border="0" cellpadding="0" cellspacing="0" width="100%">
-              <tr><td width="50%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="290">
-                      <tbody>
-                        <tr>
-                          <td class="padt15 padr20 padl10" style="border-collapse: collapse;  padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">
-                              <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
-                              </a>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+<tr>
+  <td align="left" class="headline" style="border-collapse: collapse; border-left: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-top: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-top-left-radius: {{ item['radius'] }}; border-top-right-radius: {{ item['radius'] }}; padding: 15px 20px 0 10px; background-color: {{ item['background_color'] }};">
+    <p style="mso-line-height-rule: exactly; font-family: {{ item['title_font_family'] }}; font-style: {{ item['title_font_style'] }}; font-weight: {{ item['title_font_weight'] }}; font-size: 21px; line-height: 23px; color: {{ item['title_text_color'] }}; margin: 0; padding: 0;">
+      {{ item['title'] }}
+    </p>
+  </td>
+</tr>
 
-                    <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
-                      <tbody>
-                        <tr>
-                          <td  style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
-                            <p  style="mso-line-height-rule: exactly; font-family: {{ item['lede_font_family'] }}; font-size: {{ item['lede_font_size'] }}; line-height: {{ item['line_height'] }}; font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="font-family: {{ item['lede_font_family'] }}; font-size: {{ item['lede_font_size'] }}; line-height: {{ item['line_height'] }}; text-decoration: underline;color: #000000 !important;">{{ item['title']}}</a> →</p>
-                              <p style="mso-line-height-rule: exactly;font-family: {{ item['subtitle_font_family'] }}; font-size: {{ item['subtitle_font_size'] }}; line-height: {{ item['line_height'] }}; font-weight: 600; color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">{{ item['subtitle'] }}</p>
-                            <p style="mso-line-height-rule: exactly;font-family: {{ item['username_font_family'] }}; font-style: '{{ item['username_font_style'] }}'; font-size: 12px;line-height: 16px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #707070 !important;">{{ item['author_username']}}</p>
-                            <p style="font-family: {{ item['main_copy_font_family'] }}; font-style: '{{ item['main_copy_font_style'] }}'; font-weight: '{{ item['main_copy_font_weight']}}'; font-size: {{ item['main_copy_font_size'] }}; line-height: {{ item['main_copy_line_height'] }}; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+<tr>
+  <td align="left" style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-left: {{ item['border_width_left'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width_right'] }} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width_bottom'] }} solid {{ item['border_color'] }}; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }};">
 
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
-                <!-- end accessory-item.html-->
+    <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; max-width: 600px;">
+      <tr>
+
+        <!-- IMAGE FIRST ON MOBILE, RIGHT ON DESKTOP -->
+        <td class="column-image" align="center" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 10px 15px 10px;">
+          <a href="{{ item['link_ref'] }}" style="text-decoration: underline; color: #000000 !important;">
+            <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic; display: block; max-width: 250px; width: 100%; height: auto; border-radius: 0.8rem;">
+          </a>
+        </td>
+
+        <!-- TEXT CONTENT -->
+        <td class="column-text" align="left" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 20px 15px 10px;">
+          <p style="mso-line-height-rule: exactly; font-family: {{ item['lede_font_family'] }}; font-size: {{ item['lede_font_size'] }}; line-height: {{ item['line_height'] }}; font-weight: 600; color: #000000; margin: 0 0 5px 0;">
+            <a href="{{ item['lede_link_url'] }}" style="text-decoration: underline; color: #000000 !important;">{{ item['led_link_text'] }} →</a>
+          </p>
+
+          <p style="mso-line-height-rule: exactly; font-family: {{ item['subtitle_font_family'] }}; font-size: {{ item['subtitle_font_size'] }}; line-height: {{ item['line_height'] }}; font-weight: 600; color: #000000; margin: 0 0 5px 0;">
+            {{ item['subtitle'] }}
+          </p>
+
+          <p style="mso-line-height-rule: exactly; font-family: {{ item['username_font_family'] }}; font-style: {{ item['username_font_style'] }}; font-size: 12px; line-height: 16px; font-weight: 400; color: #707070; margin: 0 0 5px 0;">
+            {{ item['author_username'] }}
+          </p>
+
+          <p style="font-family: {{ item['main_copy_font_family'] }}; font-style: {{ item['main_copy_font_style'] }}; font-weight: {{ item['main_copy_font_weight'] }}; font-size: {{ item['main_copy_font_size'] }}; line-height: {{ item['main_copy_line_height'] }}; color: #000000; margin: 0 0 15px 0;">
+            {{ item['main_copy'] }}
+          </p>
+        </td>
+
+      </tr>
+    </table>
+
+  </td>
+</tr>
+<!-- end book-haul-item.html -->
