--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,56 +1,53 @@
-    <!-- start full-width-item-header.html-->
-    <!-- mayday mayday mayday -->
-  <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-      <tbody>
-        <tr>
-          <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
-        </tr>
-               <tr>
-                <td align="center" style="background-color: {{ item['header_background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }}; {{ item['extra_box_style'] }}; padding-top: 15px ;padding-bottom: 15px;">
-                  <span style="mso-line-height-rule: exactly; font-size: {{ item['header_font_size'] }}; font-family: '{{ item['header_font_family'] }}'; font-style: {{ item['header_font_style']}}; font-weight: {{item['header_font_weight']}}; line-height: normal; color: #000000; margin: 0; padding: 0;">{{ item['header_text']}}</span>
-                </td>
-              </tr>
-              </tbody>
-              </table>
-    <!-- end full-width-item-header.html -->
-
 <!-- start full-width-item.html-->
-<tr style="border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }};{{ item['extra_box_style'] }};">
-    <td style="background-color: {{ item['background_color'] }}; ">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="600px">
-            <tbody>
-              <tr>
-                <td class="padt15" style="border-collapse: collapse; padding-left: 10px; padding-right: 10px; padding-top: 15px;" valign="top">
-                  <p style="font-family: '{{ item['title_font_family'] }}'; font-size: '{{ item['title_font_size'] }}';  line-height: {{ item['line_height'] }}; font-weight: 400; color: {{ item['text_color'] }};padding: 0; margin: 0; margin-bottom: 15px;">
-                    <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block; max-height: 900px; max-width: 600px; width: 100%; border-radius: {{item['image_corner_radius'] } };"></a>
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-    </td>
-    </tr>
-    <tr>
-      <td style="background:{{ item['background_color'] }}; border-bottom-left-radius: {{ item['border-bottom-left-radius'] }}; border-bottom-right-radius: {{ item['border-bottom-right-radius'] }};">
-        <!--[if mso]></td><td width="100%" valign="top"><![endif]-->
-          <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600">
-            <tbody>
-              <tr>
-                <td style="border-collapse: collapse;padding-top: 15px; padding-left: 10px; padding-right: 10px;" valign="top">
+<tr>
+  <td align="center" bgcolor="{{ item['background_color'] }}" style="border-collapse: collapse; background-color: {{ item['background_color'] }}; border-left: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-top: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-top-left-radius: {{ item['border_top_left_radius'] }}; border-top-right-radius: {{ item['border_top_right_radius'] }}; padding-top: 15px; padding-bottom: 15px;">
 
-                  <span style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}}; line-height: {{ item['line_height']}}; font-weight: bold; color: #000000;margin: 0; padding: 0 0 15px 0; padding-bottom: 5px; font-family: {{ item['font_family'] }};">
-                    <a href="{{ item['link_ref']}}" style="text-decoration: underline; color: {{ item['text_color'] }} !important;">{{ item['title']}}</a></span>
-                    <br/>
-                  <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}};  font-family: {{ item['font_family'] }}; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height']}};  font-weight: bold; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</p>
-                  
-                  <span style="mso-line-height-rule: exactly; font-size: {{ item['font_size'] }}; font-family: {{ item['font_family'] }}; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height'] }}; font-weight: normal; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important; ">{{ item['main_copy'] }}</span>
-                  <br><br>
-                    <a href="{{ item['link_ref'] }}" style="text-decoration: underline; color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
-                </td>
-              </tr>
-              </tbody>
-              </table>
-        
-    </td>
+    <!-- Image Section -->
+    <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="width: 100%; max-width: 600px; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td align="center" style="padding: 0 10px;">
+          <a href="{{ item['link_ref'] }}">
+            <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="600" style="-ms-interpolation-mode: bicubic; display: block; width: 100%; max-width: 600px; height: auto; border-radius: {{ item['image_corner_radius'] }};">
+          </a>
+        </td>
+      </tr>
+    </table>
+
+  </td>
+</tr>
+
+<tr>
+  <td align="center" bgcolor="{{ item['background_color'] }}" style="border-collapse: collapse; background-color: {{ item['background_color'] }}; border-bottom-left-radius: {{ item['border_bottom_left_radius'] }}; border-bottom-right-radius: {{ item['border_bottom_right_radius'] }};">
+
+    <!-- Text Section -->
+    <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="width: 100%; max-width: 600px; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td align="left" style="padding: 15px 10px;">
+
+          <!-- Title -->
+          <p style="margin: 0 0 5px 0; font-weight: bold;">
+            <a href="{{ item['link_ref'] }}" style="text-decoration: underline; color: {{ item['title_text_color'] }} !important; font-family: {{ item['title_font_family'] }}; font-size: {{ item['font_size'] }};">{{ item['title'] }}</a>
+          </p>
+
+          <!-- Subtitle -->
+          <p style="margin: 0 0 10px 0; font-weight: bold; color: {{ item['light_text_color'] }} !important;">
+            {{ item['subtitle'] }}
+          </p>
+
+          <!-- Main Copy -->
+          <p style="margin: 0 0 15px 0; font-weight: normal; color: {{ item['main_copy_text_color'] }} !important;font-family: {{ item['main_copy_font_family'] }}; font-size: {{ item['main_copy_font_size'] }};">
+            {{ item['main_copy'] }}
+          </p>
+
+          <!-- Read More Link -->
+          <p style="margin: 0;">
+            <a href="{{ item['read_more_link_ref'] }}" style="text-decoration: underline; color: {{ item['text_color'] }} !important;">Read More ⇒</a>
+          </p>
+
+        </td>
+      </tr>
+    </table>
+
+  </td>
 </tr>
 <!-- end full-width-item.html-->
