--- a/templates/image-feature.html
+++ b/templates/image-feature.html
@@ -1,16 +1,44 @@
 <!-- start image-feature.html-->
 <tr>
-  <td style="style=background-color: {{item['background_color']}}; border-collapse: collapse;   border-left: {{ item['border_width_left']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width_right']}} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width_bottom']}} solid {{ item['border_color'] }}; border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-top-right-radius: {{ item['top_right_radius']}};  border-top-left-radius: {{ item['top_left_radius']}}; {{ item['extra_box_style'] }}; background:{{ item['background_color'] }};">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600px">
-          <tbody>
-            <tr>
-              <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px; padding-bottom: 15px; padding-right: 10px;padding-left: 10px;" valign="top">
-                  <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic; max-width: 100%; height: auto; display: block; border-radius: 0.8rem;">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-  </td>
-  </tr>
+  <td style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-left: {{ item['border_width_left'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width_right'] }} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width_bottom'] }} solid {{ item['border_color'] }}; border-top: {{ item['border_width_top'] }} solid {{ item['border_color'] }}; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }}; border-top-left-radius: {{ item['top_left_radius'] }}; border-top-right-radius: {{ item['top_right_radius'] }};">
 
+    <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 600px;">
+      <tbody>
+
+        <!-- IMAGE -->
+        <tr>
+          <td style="border-collapse: collapse; padding: 15px 10px 0 10px;" valign="top">
+            <a href="{{ item['link_ref'] }}">
+              <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="600" style="-ms-interpolation-mode: bicubic; max-width: 100%; height: auto; display: block; border-radius: {{ item['image_corner_radius'] }};">
+            </a>
+          </td>
+        </tr>
+
+        <!-- TEXT -->
+        <tr>
+          <td style="border-collapse: collapse; padding: 15px 10px 20px 10px;" valign="top">
+            
+            <!-- Title -->
+            <p style="margin: 0 0 10px 0; font-family: {{ item['title_font_family'] }}; font-size: {{ item['title_font_size'] }}; line-height: {{ item['title_line_height'] }}; font-style: {{ item['title_font_style'] }}; font-weight: {{ item['title_font_weight'] }}; color: {{ item['title_color'] }};">
+              {{ item['title'] }}
+            </p>
+
+            <!-- Main Copy -->
+            <p style="margin: 0 0 15px 0; font-family: {{ item['font_family'] }}; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight'] }}; color: {{ item['text_color'] }};">
+              {{ item['main_copy'] }}
+            </p>
+
+            <!-- Read More Link -->
+            <p style="margin: 0; font-family: {{ item['font_family'] }}; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight'] }};">
+              <a href="{{ item['read_more_url'] }}" style="text-decoration: underline; color: {{ item['link_color'] }} !important;">{{ item['read_more_text'] }}</a> <span style="color: {{ item['link_color'] }} !important;">⇒</span>
+            </p>
+
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+
+  </td>
+</tr>
 <!-- end image-feature.html-->
