--- a/templates/image-right.html
+++ b/templates/image-right.html
@@ -1,35 +1,29 @@
-<!-- start image-right.html-->
+<!-- start image-right.html -->
 <tr>
   <td align="left" style="padding-bottom: 15px; background-color: {{item['background_color']}}; border-collapse: collapse;">
     <!-- Main container table -->
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="force-row" style="border-spacing: 0; max-width: 600px;">
       <tr>
-        <!-- Text content (LEFT side) -->
-        <td width="50%" valign="top" style="border-collapse: collapse; padding: 0;">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
-            <tr>
-              <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
-                <p class="padb5" style="mso-line-height-rule: exactly;font-family: {{ item['font_family'] }}; font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                  <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
-                  </a> ↻</p>
-                <p class="padb5" style="mso-line-height-rule: exactly;font-family: {{ item['font_family'] }}; font-size: 15px;line-height: 19px;font-weight: {{item['font_weight']}};color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">{{ item['main_copy']}}</p>
-              </td>
-            </tr>
-          </table>
+
+        <!-- Image content (RIGHT side on desktop, top on mobile) -->
+        <td class="column-image" align="center" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 20px 15px 10px;">
+          <a href="{{ item['link_url'] }}">
+            <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic; display: block; max-width: 100%; height: auto; border-radius: 0.8rem;">
+          </a>
         </td>
-        
-        <!-- Image content (RIGHT side) -->
-        <td width="50%" valign="top" style="border-collapse: collapse; padding: 0;">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
-            <tr>
-              <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic;display: block;border-radius: 0.8rem;"></a>
-              </td>
-            </tr>
-          </table>
+
+        <!-- Text content (LEFT side on desktop, bottom on mobile) -->
+        <td class="column-text" align="left" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 10px 15px 20px;">
+          <p style="mso-line-height-rule: exactly; font-family: {{ item['title_font_family'] }}; font-size: 16px; line-height: 23px; font-weight: 600; color: #000000; margin: 0 0 5px 0;">
+            <a href="{{ item['link_url'] }}" style="text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> ↻
+          </p>
+          <p style="mso-line-height-rule: exactly; font-family: {{ item['main_copy_font_family'] }}; font-size: 15px; line-height: 19px; font-weight: {{ item['font_weight'] }}; color: #000000; margin: 0;">
+            {{ item['main_copy'] }}
+          </p>
         </td>
+
       </tr>
     </table>
   </td>
 </tr>
-<!-- end image-right.html-->
+<!-- end image-right.html -->
