--- a/templates/member-feature-item.html
+++ b/templates/member-feature-item.html
@@ -1,57 +1,70 @@
+<!-- start member-feature-item.html-->
+<tr>
+  <td align="left" style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-left: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width'] }} solid {{ item['border_color'] }};">
 
-                <!-- start member-feature-item.html-->
-                <tr>
-                  <td align="left" style="background-color: {{item['background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }}; {{ item['extra_box_style'] }};">
+    <!--[if mso]>
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <td width="50%" valign="top">
+    <![endif]-->
 
-                    <!--[if mso]>
-              <table border="0" cellpadding="0" cellspacing="0" width="100%">
-              <tr><td width="50%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
-                      <tbody>
-                        <tr>
-                          <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <p style="font-family: {{ item['font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 16px; line-height: 18px;color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
-                              <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
-                            </p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+    <table align="left" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="280">
+      <tbody>
+        <tr>
+          <td class="padt15 padr10 padl20" style="border-collapse: collapse; padding: 15px 10px 15px 20px; background-color: {{ item['background_color'] }}" valign="top">
+            <p class="padb5" style="mso-line-height-rule: exactly; font-size: 16px; line-height: 23px; font-weight: 600; color: #000000; margin: 0; padding: 0 0 5px 0;">
+              <a href="{{ item['title_link_url'] }}" style="font-family: {{ item['title_font_family'] }}; text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> ↻
+            </p>
+            <p style="font-family: {{ item['subtitle_font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight'] }}; font-size: 15px; line-height: 18px; color: {{ item['text_color'] }}; padding: 0; margin: 0;">
+              {{ item['long_subtitle'] }}
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-                    <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
-                      <tbody>
-                        <tr>
-                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <p class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
-                              </a> ↻</p>{{ item['subtitle']}}
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+    <!--[if mso]>
+        </td><td width="50%" valign="top">
+    <![endif]-->
 
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
+    <table align="right" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="280">
+      <tbody>
+        <tr>
+          <td class="padt15 padr20 padl10" style="border-collapse: collapse; padding: 15px 20px 15px 10px; background-color: {{ item['background_color'] }}" valign="top">
+            <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic; display: block; max-height: 900px; max-width: 280px; width: 100%; height: auto; border-radius: 0.8rem;">
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
+    <!--[if mso]>
+        </td></tr></table>
+    <![endif]-->
 
-                <tr>
-                  <td align="left" style=" background-color: {{item['background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width']}} solid {{ item['border_color'] }}; {{ item['extra_box_style'] }};">
+  </td>
+</tr>
 
-                    <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
-                    <table border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" >
-                      <tbody>
-                        <tr>
-                          <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                            <p style="font-family: {{ item['font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Let's grow the network.<br>Connect with <a href="{{ item['connect_link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">{{ item['first_name'] }}↗</a>.</p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+<!-- second block (main_copy text) -->
+<tr>
+  <td align="left" style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-left: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width'] }} solid {{ item['border_color'] }};">
 
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
-                <!-- end member-feature-item.html-->
+    <table border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
+      <tbody>
+        <tr>
+          <td style="border-collapse: collapse; padding: 15px 10px; background-color: {{ item['background_color'] }}" valign="top">
+            <p style="font-family: {{ item['font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight'] }}; font-size: 15px; line-height: 18px; color: #000000; padding: 0; margin: 0 0 15px 0;">
+              {{ item['main_copy'] }}
+            </p>
+            <p style="font-size: 15px; line-height: 15px; font-weight: 400; color: #000000; padding: 0; margin: 0;">
+              Let's grow the network.<br>
+              Connect with 
+              <a href="{{ item['connect_link_ref'] }}" style="text-decoration: underline; color: {{ item['text_color'] }} !important;">{{ item['first_name'] }} ↗</a>.
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+  </td>
+</tr>
+<!-- end member-feature-item.html-->
