--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -24,7 +24,7 @@
       <tbody>
         <tr>
           <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-            <p style="font-size: 16px;line-height: 20px;font-weight: {{item['font_weight']}};color: {{item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy']}}</p>
+            <p style="font-size: 16px;line-height: 20px;color: {{item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy']}}</p>
           </td>
         </tr>
       </tbody>
