Fixes and moved bottom into the templates so I can update the links and dates and crap

--- a/templates/book-haul-item.html
+++ b/templates/book-haul-item.html
@@ -18,7 +18,7 @@
       <tr>
 
         <!-- IMAGE FIRST ON MOBILE, RIGHT ON DESKTOP -->
-        <td class="column-image" align="center" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 10px 15px 10px;">
+        <td class="column-image" align="left" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 10px 15px 10px;">
           <a href="{{ item['link_ref'] }}" style="text-decoration: underline; color: #000000 !important;">
             <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic; display: block; max-width: 250px; width: 100%; height: auto; border-radius: 0.8rem;">
           </a>
