--- a/templates/top-quote.html
+++ b/templates/top-quote.html
@@ -8,7 +8,7 @@
           <tbody>
             <tr>
               <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 0px;" valign="top">
-                <p  style="font-family:FormaDJRUI, Roboto, Monaco, sans-serif; font-variation-settings: 'wght' 900;font-size: 22px;line-height: 20px;color: #000000;padding: 0 10px ;margin: 0;margin-bottom: 5px;">
+                <p  style="font-family: {{ item['font_family'] }}; font-variation-settings: 'wght' 900;font-size: {{ item['font_size'] }};line-height: {{ item['line_height' ]}};color: #000000;padding: 0 10px ;margin: 0;margin-bottom: 5px;">
                   <!-- QUOTE -->
                   {{ item['quote'] }}
                 </p>
