--- a/templates/bottom.html
+++ b/templates/bottom.html
@@ -30,13 +30,8 @@
                       <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
                         <!-- <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;">Amplify This</h1> -->
                         <p class="share" style="font-size: 9px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
-                          <a href="https://nearfuturelaboratory.com/outbox/issues/2025/w17-y25.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">nearfuturelaboratory.com/outbox/issues/2025/w17-y25.html</b></a>
+                          <a href="https://nearfuturelaboratory.com/outbox/issues/2025/{{ item['html_file_name'] }}" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">nearfuturelaboratory.com/outbox/issues/2025/{{item['html_file_name'] }}</b></a>
                         </p>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td style="text-align: center;border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-left: 20px; padding-bottom: 10px;" valign="top">
-                        <!-- <p style="mso-line-height-rule: exactly;font-family: FormaDJRVariable;font-variation-settings: 'wght' 300; font-size: 14px;line-height: 14px;color: #000000;margin: 0;padding: 0;padding-bottom: 0px;">With Gratitude to Kai Brach who has been running the newsletter <a href="https://densediscovery.com">Dense Discovery</a> for ages and who is a <a href="https://densediscovery.com/notes/behind-the-scenes/">DIY hero of mine</a>. This email template — another one in my process of 'prototyping in public' — is completely based on his template design, done in the spirit of building and refining to personal taste. Who knows what will come in the next newsletter; I sure don't know. Getting off the Silicon Stacks as much as possible feels right.</p> -->
                       </td>
                     </tr>
                     <tr>
@@ -68,12 +63,12 @@
                     </tr>
                     <tr>
                       <td style="font-size: 14px; font-family: 'Space Mono'; color: #fc00ac; font-style: normal; font-weight: 300; padding-top:5rem; padding-bottom: 0rem; margin-bottom: 1rem; margin-top: 0rem; text-align: center;">
-                        © 2025 Near Future Laboratory LLC
+                        © {{ item['build_year'] }} Near Future Laboratory LLC
                       </td>
                     </tr>
                     <tr>
                       <td style="font-family: 'Space Mono'; color: #fc00ac; font-style: normal; font-weight: 300; font-size: 14px; line-height: 15px; text-align: center; padding-top: 2px; padding-bottom: 20px;">
-                        Build Time: 2025-01-07T21:10:58-08:00<br/>
+                        Build Time: {{ item['build_time'] }}<br/>
                         Prepared for [Email]<br/>
                         <a href="[unsubscribe]">unsubscribe</a>
                       </td>
