--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -1,7 +1,19 @@
 <!-- start discord-callout-item.html -->
 <tr>
-  <td align="left" style="border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-collapse: collapse; background-color: {{ item['background_color']}};">
+  <td align="left" style="border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-collapse: collapse; background-color: {{ item['background_color'] }};">
     
+    {% if item['image_url'] %}
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <td align="center" style="padding: 15px 10px 0 10px;">
+          <a href="{{ item['page_url']}}">
+            <img src="{{ item['image_url'] }}" alt="{{ item['image_alt'] | default('') }}" width="{{ item['image_width'] | default('560') }}" style="display: block; border: 0; max-width: 100%; width: {{ item['image_width'] | default('560') }}px; border-radius: 0.8rem;">
+          </a>
+        </td>
+      </tr>
+    </table>
+    {% endif %}
+
     <!--[if mso]>
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr><td width="30%" valign="top"><![endif]-->
@@ -10,7 +22,7 @@
         <tr>
           <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
             <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-              <a href="{{ item['link_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
+              <a href="{{ item['page_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
                 {{ item['link_text'] }}
               </a> ➜</h2>
             <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 12px;font-weight: 200;margin: 0;padding: 0 0 5px 0;color:{{ item['light_text_color']}} !important;">{{ item['user_callout']}}</p>
@@ -31,6 +43,13 @@
     </table>
 
     <!--[if mso]></td></tr></table><![endif]-->
-  </td>
+  </td> <!-- This is the closing TD for the main content cell with the background color -->
+</tr> <!-- This closes the TR for the main content -->
+
+<!-- Spacer Row - Add this section -->
+<tr>
+  <td height="35" style="font-size: 15px; line-height: 15px; background-color: #FFFFFF;">&nbsp;</td> <!-- Adjust height and background as needed -->
 </tr>
+<!-- End Spacer Row -->
+
 <!-- end discord-callout-item.html -->
