--- a/templates/image-right.html
+++ b/templates/image-right.html
@@ -15,9 +15,9 @@
         <!-- Text content (LEFT side on desktop, bottom on mobile) -->
         <td class="column-text" align="left" valign="top" style="border-collapse: collapse; width: 50%; padding: 15px 10px 15px 20px;">
           <p style="mso-line-height-rule: exactly; font-family: {{ item['title_font_family'] }}; font-size: 16px; line-height: 23px; font-weight: 600; color: #000000; margin: 0 0 5px 0;">
-            <a href="{{ item['link_url'] }}" style="text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> ↻
+            <a href="{{ item['link_url'] }}" style="text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> ➜
           </p>
-          <p style="mso-line-height-rule: exactly; font-family: {{ item['main_copy_font_family'] }}; font-size: 15px; line-height: 19px; font-weight: {{ item['font_weight'] }}; color: #000000; margin: 0;">
+          <p style="font-family: {{ item['main_copy_font_family'] }}; font-style: {{ item['main_copy_font_style'] }}; font-weight: {{ item['main_copy_font_weight'] }}; font-size: {{ item['main_copy_font_size'] }}; line-height: {{ item['main_copy_line_height'] }}; color: #000000; margin: 0 0 15px 0;">
             {{ item['main_copy'] }}
           </p>
         </td>
