--- a/templates/member-feature-item.html
+++ b/templates/member-feature-item.html
@@ -13,7 +13,7 @@
         <tr>
           <td class="padt15 padr10 padl20" style="border-collapse: collapse; padding: 15px 10px 15px 20px; background-color: {{ item['background_color'] }}" valign="top">
             <p class="padb5" style="mso-line-height-rule: exactly; font-size: 16px; line-height: 23px; font-weight: 600; color: #000000; margin: 0; padding: 0 0 5px 0;">
-              <a href="{{ item['title_link_url'] }}" style="font-family: {{ item['title_font_family'] }}; text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> ↻
+              <a href="{{ item['title_link_url'] }}" style="font-family: {{ item['title_font_family'] }}; text-decoration: underline; color: #000000 !important;">{{ item['title'] }}</a> →
             </p>
             <p style="font-family: {{ item['subtitle_font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight'] }}; font-size: 15px; line-height: 18px; color: {{ item['text_color'] }}; padding: 0; margin: 0;">
               {{ item['long_subtitle'] }}
