--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -236,7 +236,7 @@
     <!-- BODY -->
     <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;table-layout: fixed;margin: 0 auto;">    <tbody>            
       <tr>
-        <td align="center" style="margin-bottom: 15px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+        <td align="center" style="margin-bottom: 15px; background-color: #F0F0F0;border-collapse: collapse;" valign="top">
           
           <!-- 600px container (white background) -->
           <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;">
