--- a/templates/subject-line.html
+++ b/templates/subject-line.html
@@ -7,7 +7,7 @@
                         <tr>
                           <td style="border-collapse: collapse; padding-left: 10px;" valign="top">
                             <p style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin-bottom: 25px; padding: 0;">
-                              It was Week {{ item['week_number'] }} of {{ item['year'] }} at Near Future Laboratory, and some things happened.
+                              It was Week {{ item['week_number'] }} of {{ item['year'] }} {{ item['end_phrase']}}.
                             </p>
                             
                           </td>
