Getting closer to DD styles

--- a/templates/simple-text.html
+++ b/templates/simple-text.html
@@ -1,20 +1,20 @@
 <!-- start text-feature.html-->
 <tr>
-    <td style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-left: {{ item['border_width_left'] }} solid {{ item['border_color'] }}; border-right: {{ item['border_width_right'] }} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width_bottom'] }} solid {{ item['border_color'] }}; border-top: {{ item['border_width_top'] }} solid {{ item['border_color'] }}; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }}; border-top-left-radius: {{ item['top_left_radius'] }}; border-top-right-radius: {{ item['top_right_radius'] }};">
+    <td style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }}; border-top-left-radius: {{ item['top_left_radius'] }}; border-top-right-radius: {{ item['top_right_radius'] }};">
   
-      <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 600px;">
-        <tbody>
+      <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 640px;">
+        
           <tr>
-            <td style="border-collapse: collapse; padding: 20px 20px 20px 10px;" valign="top">
+            <td style="border-collapse: collapse; padding: 20px 20px 20px 20px;" valign="top">
               
               <!-- Dynamic HTML Text -->
-              <div style="font-family: {{ item['font_family'] }}; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
+              <div style="font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
                 {{ item['main_html'] }}
               </div>
   
             </td>
           </tr>
-        </tbody>
+        
       </table>
   
     </td>
