--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -1,245 +1,128 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
-  
-  <!--[if gte mso 9]><xml>
-    <o:OfficeDocumentSettings>
-    <o:AllowPNG></o:AllowPNG>
-    <o:PixelsPerInch>96</o:PixelsPerInch>
-  </o:OfficeDocumentSettings>
-</xml><![endif]-->
+<!-- start top.html -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="format-detection" content="telephone=no,date=no,address=no,email=no,url=no" />
 
-<!--[if gt mso 15]>
-<style type="text/css" media="all">
-  /* Outlook 2016 Height Fix */
-  table, tr, td {border-collapse: collapse;}
-  tr { font-size:0px; line-height:0px; border-collapse: collapse; }
-</style>
-<![endif]-->
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="format-detection" content="date=no">
-<meta name="format-detection" content="telephone=no">
+    <title>Near Future Laboratory Newsletter</title>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-<style>
-  
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRUI-Bold.woff2') format("woff2"),
-    url('/fonts/formadjr/FormaDJRUI-Bold.woff') format("woff");
-    font-family: 'FormaDJRUI';
-    font-style: normal;
-    font-weight: bold;
-  }
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
-    font-family: 'WarblerText';
-    font-style: normal;
-    font-weight: 400;
-  }
-  
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
-    font-family: 'WarblerText';
-    font-style: italic;
-    font-weight: 400;
-  }
-  
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
-    font-family: 'WarblerText';
-    font-style: normal;
-    font-weight: bold;
-    font-weight: 700;
-  }
-  
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff') format("woff");
-    font-family: 'WarblerText';
-    font-weight: bold;
-    font-style: italic;
-    font-weight: 700;
-  }
-  
-  @font-face {
-    src: url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-    url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
-    font-family: 'RoslindaleVariable';
-  }
-  
-  @font-face {
-    font-family: "ChicagoKare";
-    font-weight: 400;
-    font-style: normal;
-    src: url('https://nearfuturelaboratory.com/fonts/chicagokare-regular/ChicagoKare-Regular.woff2') format('woff2');
-  }
-  
-</style>
-<style media="screen" type="text/css">
-  @media screen and (max-width:599px) {
-    .force-row,
-    .container,
-    .body,
-    .footer {
-      width: 100% !important;
-      max-width: 100% !important;
-    }
-    .headline {
-      padding-left: 12px !important;
-      padding-right: 12px !important;
-    }
-    .large,
-    h1 {
-      font-size: 19px !important;
-      line-height: 27px !important;
-    }
-    .spacer {
-      padding-top: 15px !important;
-    }
-    .browser {
-      display: none !important;
-    }
-    .align-left {
-      text-align: left
-    }
-    a.h1byline {
-      line-height: 12px !important;
-      padding-top: 8px;
-      font-size: 10px !important;
-    }
-    .rounded-box {
-      border-radius: 0.5rem !important;
-    }
-    /* Stack columns instead of side-by-side */
-    .column-image,
-    .column-text {
-      display: block !important;
-      width: 100% !important;
-      max-width: 100% !important;
-    }
-    
-    /* Adjust padding for stacked layout */
-    .column-image {
-      padding-bottom: 0 !important;
-    }
-    
-    .padl20, .padr20, .padl10, .padr10 {
-      padding-left: 15px !important;
-      padding-right: 15px !important;
-    }
-    
-    /* Make images fit the width */
-    img:not(.small-image) {
-      width: 100% !important;
-      max-width: 100% !important;
-      height: auto !important;
-    }   
-    
-    
-    /* Force tables to be 100% width */
-    table.force-row {
-      width: 100% !important;
-      max-width: 100% !important;
-    }
-    
-    /* Add some space between stacked elements */
-    .column-image td {
-      padding-bottom: 0 !important;
-    }
-    
-  }
-  
-</style>
+    <style media="screen" type="text/css">
+      @media screen and (max-width:599px) {
+        .fr,
+        .container,
+        .header,
+        .body,
+        .footer {
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+        .pl20 {
+          padding-left: 12px !important
+        }
+        .pr20 {
+          padding-right: 12px !important
+        }
+        .pl10 {
+          padding-left: 12px !important
+        }
+        .pr10 {
+          padding-right: 12px !important
+        }
+        .pt20 {
+          padding-top: 12px !important
+        }
+        .mobt0 {
+          padding-top: 0 !important
+        }
+        .mobb15 {
+          margin-bottom: 15px !important
+        }
+        .hl {
+          padding-left: 12px !important;
+          padding-right: 12px !important;
+        }
+        .lg,
+        h1 {
+          font-size: 18px !important;
+          line-height: 26px !important;
+        }
+        .spc {
+          padding-top: 15px !important;
+        }
+        .browser {
+          text-align: left !important;
+        }
+        a.spo {
+          line-height: 12px !important;
+          padding-top: 8px;
+          font-size: 10px !important;
+        }
+      }
+    </style>
 
-<!--[if mso]>
+    <!--[if mso]>
 <style type="text/css">
-  body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
+body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
 </style>
 <![endif]-->
-<style media="screen" type="text/css">
-  .ios-footer a {
-    color: #aaaaaa !important;
-    text-decoration: underline;
-  }
-  .yshortcuts a {
-    border-bottom: none !important;
-  }
-  .ExternalClass {
-    width: 100%;
-  }
-  .ExternalClass,
-  .ExternalClass p,
-  .ExternalClass span,
-  .ExternalClass font,
-  .ExternalClass td,
-  .ExternalClass div {
-    line-height: 100%;
-  }
-  .ReadMsgBody {
-    width: 100%;
-    background-color: #ebebeb;
-  }
-  img {
-    -ms-interpolation-mode: bicubic;
-  }
-  a[href^="x-apple-data-detectors:"],
-  a[x-apple-data-detectors] {
-    color: inherit !important;
-    text-decoration: none !important;
-    font-size: inherit !important;
-    font-family: inherit !important;
-    font-weight: inherit !important;
-    line-height: inherit !important;
-  }
-</style>
-<style>
-  /* CSS HEX */
-  
-  :root {
-    --orange-color: #FFA500;
-    --aquamarine: #77F2B4;
-    --amethyst: #9b5de5ff;
-    --lavender-pink: #F7B7D7;
-    --maize: #fee440ff;
-    --timberwolf: #CCCCC8;
-    --celadon: #B6D9C6;
-    --brightblue: #95defe;
-    --straw: #F7F49C;
-  }
-</style>
-</head>
-<body style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
-  
-  <div style="margin:0 auto;max-width:600px;width:100%;">
-    <!-- HEADER -->
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
+    <style media="screen" type="text/css">
+      .ios-footer a {
+        color: #aaaaaa !important;
+        text-decoration: underline;
+      }
+      .yshortcuts a {
+        border-bottom: none !important;
+      }
+      .ExternalClass {
+        width: 100%;
+      }
+      .ExternalClass,
+      .ExternalClass p,
+      .ExternalClass span,
+      .ExternalClass font,
+      .ExternalClass td,
+      .ExternalClass div {
+        line-height: 100%;
+      }
+      .ReadMsgBody {
+        width: 100%;
+        background-color: #ebebeb;
+      }
+      img {
+        -ms-interpolation-mode: bicubic;
+      }
+      a[href^="x-apple-data-detectors:"],
+      a[x-apple-data-detectors] {
+        color: inherit !important;
+        text-decoration: none !important;
+        font-size: inherit !important;
+        font-family: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+      }
+    </style>
+
+    <!--[if mso]>
+    <style type="text/css">
+      body, table, td {
+        font-family: Arial, sans-serif !important;
+      }
+    </style>
+    <![endif]-->
+  </head>
+
+  <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style='-moz-osx-font-smoothing:grayscale; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; -webkit-text-size-adjust:100%; font-family:"SF Pro Display", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", sans-serif; margin:0; padding:0'>
+    <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0;">
       <tr>
-        <td align="center" style="padding: 15px 0;">
-          <img src="https://nearfuturelaboratory.com/images/site/logos/LaboratoryCircle_Guy_01_CircleTeal_200px.png" 
-          alt="Near Future Laboratory" 
-          width="120" 
-          class="small-image" 
-          style="-ms-interpolation-mode: bicubic; border: 0; display: block; max-width: 120px; width: 100%; height: auto;">
-        </td>
-        
-      </tr>
-    </table>
-    
-    <!-- BODY -->
-    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;table-layout: fixed;margin: 0 auto;">    <tbody>            
-      <tr>
-        <td align="center" style="margin-bottom: 15px; background-color: #F0F0F0;border-collapse: collapse;" valign="top">
-          
-          <!-- 600px container (white background) -->
-          <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;">
-            <tbody>
-              
-              <!-- end top.html -->
+        <td align="center" valign="top" style="border-collapse:collapse;">
+          <table border="0" width="640" cellpadding="0" cellspacing="0" class="body" style="width:640px; max-width:640px;">
+            <!-- <tr>
+              <td bgcolor="#fde6c2" style="padding-top:20px;"> -->
+<!-- end top.html -->
+            <!-- content starts here -->
+
+
