--- a/templates/bottom.html
+++ b/templates/bottom.html
@@ -1,3 +1,9 @@
+ <!-- close 640px content table -->
+</table>
+</td>
+</tr>
+</table>
+
 <!-- FOOTER 2 -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0 auto; text-align: center;">
   <tr>
@@ -7,20 +13,20 @@
   </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" style="background-color: #F8F8F8; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-  <tbody>
+  
     <tr>
       <td align="center" style="background-color: #f8f8f8;border-collapse: collapse;" valign="top">
 
         <!-- 600px container -->
         <table border="0" cellpadding="0" cellspacing="0" class="footer" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt; width: 600px; max-width: 600px;">
-          <tbody>
+          
             <tr>
               <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
             </tr>
             <tr>
               <td align="left" style="border-collapse: collapse;">
                 <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-                  <tbody>
+                  
                     <tr>
                       <td style="text-align: center;border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-left: 20px; padding-bottom: 10px;" valign="top">
                         <p style="mso-line-height-rule: exactly;font-family: FormaDJRVariable;font-variation-settings: 'wght' 400; font-size: 20px;line-height: 20px;color: #000000;margin: 0;padding: 0;padding-bottom: 0px;">Colophon</p>
@@ -73,19 +79,19 @@
                         <a href="[unsubscribe]">unsubscribe</a>
                       </td>
                     </tr>
-                  </tbody>
+                  
                 </table>
               </td>
             </tr>
             <tr>
               <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
             </tr>
-          </tbody>
+          
         </table>
       </td>
     </tr>
-  </tbody>
+  
 </table>
-</div>
+
 </body>
 </html>
