--- a/templates/spacer.html
+++ b/templates/spacer.html
@@ -1,8 +1,7 @@
 <!-- start spacer-feature.html-->
 <tr>
-    <td height="{{ item['spacer_height'] }}" style="height: {{ item['spacer_height'] }}; background-color: {{ item['spacer_color'] }}; font-size: 1px; line-height: 1px; border-collapse: collapse;">
-      &nbsp;
-    </td>
-  </tr>
-  <!-- end spacer-feature.html-->
-  
+  <td height="{{ item['spacer_height'] }}" style="height: {{ item['spacer_height'] }}; background-color: {{ item['background_color'] }}; font-size: 1px; line-height: 1px; border-collapse: collapse;">
+    &nbsp;
+  </td>
+</tr>
+<!-- end spacer-feature.html-->
