More templates tweaked..

--- a/templates/simple-text.html
+++ b/templates/simple-text.html
@@ -8,7 +8,7 @@
             <td style="border-collapse: collapse; padding: 20px 20px 20px 20px;" valign="top">
               
               <!-- Dynamic HTML Text -->
-              <div style="font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
+              <div style="font-family: 'Inter, sans-serif' !important; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
                 {{ item['main_html'] }}
               </div>
   
