--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="format-detection" content="telephone=no,date=no,address=no,email=no,url=no" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
     <title>Near Future Laboratory Newsletter</title>
 
@@ -115,7 +118,7 @@ body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
     <![endif]-->
   </head>
 
-  <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style='-moz-osx-font-smoothing:grayscale; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; -webkit-text-size-adjust:100%; font-family:"SF Pro Display", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", sans-serif; margin:0; padding:0'>
+  <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style='-moz-osx-font-smoothing:grayscale; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; -webkit-text-size-adjust:100%; font-family:"Inter, SF Pro Display", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", sans-serif; margin:0; padding:0'>
     <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0;">
       <tr>
         <td align="center" valign="top" style="border-collapse:collapse;">
